<resources>
    <string name="app_name">比翼联盟</string>
    <string name="bottom_home">首页</string>
    <string name="bottom_foucs">关注</string>
    <string name="bottom_server">比比驿站</string>
    <string name="bottom_my">我的</string>

    <string name="companyInfo">企业资料</string>
    <string name="privateOdering">信息订阅</string>
    <string name="openMember">开通会员</string>
    <string name="adService">广告服务</string>
    <string name="aboutOur">关于我们</string>
    <string name="serviceTerm">服务条款</string>
    <string name="legalStatement">法律声明</string>
    <string name="setting">设置</string>
    <string name="projectInfo">项目信息</string>
    <string name="searchhint">请输入您想查询的信息</string>
    <string name="projecNameOne">拟在建项目</string>
    <string name="projecNameTwo">业主委托项目</string>
    <string name="projecNameThree">PPP项目</string>
    <string name="projecLocation">位置</string>
    <string name="tenderInfo">招标信息</string>
    <string name="buyProjectInfo">采购信息</string>
    <string name="provideProjectInfo">供应商信息</string>
    <string name="coustmerService">客户服务</string>
    <string name="askLink">问答环节</string>
    <string name="cancel">取消</string>
    <string name="TenderDescrp">收到后我们会尽快与您联系，标书写好后将尽快发送至您的邮箱。您也可以登录“比比招标采购网”进行咨询服务。</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 1，开发用 2，打正式包用 -->
    <string name="map_test_key">121e46a27061e2084e38b53e12b37a96</string>
    <string name="map_formal_key">aadf87cfabe77d291133ee19faaac722</string>


</resources>
