<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.bibinet.biunion.project.ui.fragment.Fragment_My">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/img_my_top"
                android:orientation="vertical">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp"/>
            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="44dp">
                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="我的"
                    android:textColor="@color/white"
                    android:textSize="19sp" />
                <ImageView
                    android:id="@+id/title_imageright"
                    android:layout_width="12dp"
                    android:layout_height="21dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:src="@mipmap/ic_launcher"
                    android:visibility="gone"/>
                <ImageView
                    android:id="@+id/title_imageleft"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="17dp"
                    android:clickable="true"
                    android:onClick="onClick"
                    android:src="@mipmap/denglu_fanhui"
                    android:visibility="gone"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/logined"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/userPhoto_login"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="17dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_my_icon_background"
                    android:padding="2dp"
                    android:src="@mipmap/wode_toux"
                    />

                <TextView
                    android:id="@+id/companyName"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/userPhoto_login"
                    android:gravity="center"
                    android:text="zhangsan"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/noLogin"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                >

                <ImageView
                    android:id="@+id/uerPhoto_noLogin"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="17dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_my_icon_background"
                    android:padding="2dp"
                    android:src="@mipmap/wode_toux" />

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@id/uerPhoto_noLogin"
                    android:background="@null"
                    android:text="请点击登录"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/rigestBtn"
                    android:layout_width="66dp"
                    android:layout_height="29dp"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@id/loginBtn"
                    android:background="@mipmap/gerenzhong_zhuche"
                    android:visibility="gone" />
            </RelativeLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="#f4f4f4"
                />
            <LinearLayout
                android:id="@+id/companyInfo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragmentmy_item_hight"
                android:background="@color/white"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:src="@mipmap/wode_zl" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="18dp"
                    android:text="@string/companyInfo"
                    android:textColor="#333333" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="7dp"
                    android:layout_height="13dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="12dp"
                    android:src="@mipmap/wode_qianjin" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="12dp"
                android:background="#e1e1e1" />

            <LinearLayout
                android:id="@+id/privateOdering"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragmentmy_item_hight"
                android:background="@color/white"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:src="@mipmap/wode_sr" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="18dp"
                    android:text="@string/privateOdering"
                    android:textColor="#333333" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="7dp"
                    android:layout_height="13dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="12dp"
                    android:src="@mipmap/wode_qianjin" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="12dp"
                android:background="#e1e1e1" />

            <LinearLayout
                android:id="@+id/foucsMy"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragmentmy_item_hight"
                android:background="@color/white"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:src="@mipmap/wode_gzi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="18dp"
                    android:text="我的关注"
                    android:textColor="#333333"
                    android:textSize="14sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="7dp"
                    android:layout_height="13dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="12dp"
                    android:src="@mipmap/wode_qianjin" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="#f4f4f4" />

            <LinearLayout
                android:id="@+id/aboutOur"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragmentmy_item_hight"
                android:background="@color/white"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:src="@mipmap/wode_gy" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="18dp"
                    android:text="@string/aboutOur"
                    android:textColor="#333333"
                    android:textSize="14sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="7dp"
                    android:layout_height="13dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="12dp"
                    android:src="@mipmap/wode_qianjin" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="12dp"
                android:background="#e1e1e1" />

            <LinearLayout
                android:id="@+id/serviceTerm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragmentmy_item_hight"
                android:background="@color/white"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:src="@mipmap/wode_fw1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="18dp"
                    android:text="@string/serviceTerm"
                    android:textColor="#333333"
                    android:textSize="14sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="7dp"
                    android:layout_height="13dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="12dp"
                    android:src="@mipmap/wode_qianjin" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="12dp"
                android:background="#e1e1e1" />

            <LinearLayout
                android:id="@+id/legalStatement"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragmentmy_item_hight"
                android:background="@color/white"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:src="@mipmap/wode_fl" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="18dp"
                    android:text="@string/legalStatement"
                    android:textColor="#333333"
                    android:textSize="14sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="7dp"
                    android:layout_height="13dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="12dp"
                    android:src="@mipmap/wode_qianjin" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="12dp"
                android:background="#e1e1e1" />

            <LinearLayout
                android:id="@+id/setting"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragmentmy_item_hight"
                android:background="@color/white"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:src="@mipmap/wode_sz" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="18dp"
                    android:text="@string/setting"
                    android:textColor="#333333"
                    android:textSize="14sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="7dp"
                    android:layout_height="13dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="12dp"
                    android:src="@mipmap/wode_qianjin" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="12dp"
                android:background="#e1e1e1" />

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/titlebar"/>

</LinearLayout>
